implement graphjs visitor graph as new component

--- a/src/app/modules/devices/components/devices/devices.component.html
+++ b/src/app/modules/devices/components/devices/devices.component.html
@@ -1,1 +1,24 @@
-<p>devices works!</p>
+
+<clr-datagrid>
+    <clr-dg-column>Image</clr-dg-column>
+    <clr-dg-column>ID</clr-dg-column>
+    <clr-dg-column>Name</clr-dg-column>
+    <clr-dg-column>Location</clr-dg-column>
+    <clr-dg-column>Description</clr-dg-column>
+    <clr-dg-column>Device License</clr-dg-column>
+    <clr-dg-column>Safety Instructions</clr-dg-column>
+    <clr-dg-column>Risk Sssessment</clr-dg-column>
+
+    <clr-dg-row *ngFor="let device of devices | async">
+        <clr-dg-cell></clr-dg-cell>
+        <clr-dg-cell>{{ device.id }}</clr-dg-cell>
+        <clr-dg-cell>{{ device.name }}</clr-dg-cell>
+        <clr-dg-cell>{{ device.location }}</clr-dg-cell>
+        <clr-dg-cell>{{ device.description }}</clr-dg-cell>
+        <clr-dg-cell>{{ device.devicelicense }}</clr-dg-cell>
+        <clr-dg-cell><clr-icon shape="file" title="download" class="c-pointer"></clr-icon> {{ device.safetyinstructions | date:'dd.MM.yyyy' }} </clr-dg-cell>
+        <clr-dg-cell><clr-icon shape="file" title="download" class="c-pointer"></clr-icon> {{ device.riskassessment | date:'dd.MM.yyyy' }}</clr-dg-cell>
+    </clr-dg-row>
+
+    <clr-dg-footer>{{ devices.length }} devices</clr-dg-footer>
+</clr-datagrid>
