--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+<div class="clr-row">
+    <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
+        <div class="card">
+            <div class="card-header">
+                global visits
+            </div>
+            <div class="card-block">
+                <div class="card-title">
+                    all visitors
+                </div>
+                <div class="card-text">
+                    <app-chart-visitors style="height: 400px;"></app-chart-visitors>
+                </div>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-sm btn-link">Footer Action 1</button>
+                <button class="btn btn-sm btn-link">Footer Action 2</button>
+            </div>
+        </div>
+    </div>
+</div>
