--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,10 +5,7 @@
     
     <div class="content-container">
       <div class="content-area">
-        <router-outlet></router-outlet>
+        <ng-content></ng-content>
       </div>
-      <nav class="sidenav">
-        ...
-      </nav>
     </div>
   </div>
