--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,36 +1,17 @@
 <header class="header header-6">
   <div class="branding">
     <a href="/" class="nav-link">
+      <clr-icon shape="wrench" class="is-inverse" size="24"></clr-icon>
       <span class="title">toolbox</span>
     </a>
   </div>
   <div class="header-nav">
-    <a *ngFor="let item of menu" (click)="menuClick(item)" class="nav-link nav-text">{{ item.text }}</a>
-    <!-- <a href="javascript://" class="nav-link nav-text">Dashboard</a>
-      <a href="javascript://" class="nav-link nav-text">Geräte</a>
-      <a href="javascript://" class="active nav-link nav-text">Workshops</a>
-      <a href="javascript://" class="nav-link nav-text">Projekte</a>
-      <a href="javascript://" class="nav-link nav-text">Blog</a> -->
+    <a *ngFor="let item of menu" 
+       (click)="menuClick(item)" 
+       [ngClass]="{ 'active': item.active }"
+       class="nav-link nav-text">{{ item.text }}</a>
   </div>
   <div class="header-actions">
-
-
-    <!-- <clr-dropdown class="dropdown bottom-left">
-      <button class="dropdown-toggle btn" style="border: 0;">
-        <clr-icon shape="cog"></clr-icon>
-        <clr-icon shape="caret down"></clr-icon>
-      </button>
-      <div class="dropdown-menu">
-        <h4 class="dropdown-header">Dropdown header</h4>
-        <div class="dropdown-item active">First Action</div>
-        <div class="dropdown-item disabled">Disabled Action</div>
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-item">Link 1</div>
-        <div class="dropdown-item">Link 2</div>
-      </div>
-    </clr-dropdown> -->
-
-
 
     <clr-dropdown>
       <button class="btn btn-link" clrDropdownTrigger>
@@ -62,21 +43,10 @@
 </header>
 <nav class="subnav">
   <ul class="nav" *ngIf="selectedMenu">
+
     <li class="nav-item" *ngFor="let sub of selectedMenu.children">
-      <a class="nav-link" (click)="menuClick(sub)">{{ sub.text }}</a>
+      <a class="nav-link" [ngClass]="{ 'active': sub.active }" (click)="menuClick(sub)">{{ sub.text }}</a>
     </li>
 
-    <!-- <li class="nav-item">
-              <a class="nav-link active" href="#">Dashboard</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Management</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Cloud</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Tenants</a>
-          </li> -->
   </ul>
 </nav>
