create a detail page design draft

--- a/src/app/modules/devices/components/devices/devices.component.html
+++ b/src/app/modules/devices/components/devices/devices.component.html
@@ -9,7 +9,7 @@
     <clr-dg-column>Safety Instructions</clr-dg-column>
     <clr-dg-column>Risk Sssessment</clr-dg-column>
 
-    <clr-dg-row *ngFor="let device of devices | async">
+    <clr-dg-row *ngFor="let device of devices | async" class="c-pointer" (click)="rowClick(device)">
         <clr-dg-cell></clr-dg-cell>
         <clr-dg-cell>{{ device.id }}</clr-dg-cell>
         <clr-dg-cell>{{ device.name }}</clr-dg-cell>
